Updated code files and their outputs - fixed minor errors

--- a/Data Cleaning code files/birth data cleaning.ipynb
+++ b/Data Cleaning code files/birth data cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 87,
    "id": "07d32c82-3864-4c20-8eb1-1e1f2f72d406",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 88,
    "id": "ea678ded-a055-4826-89bc-4d594e5f1f48",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 89,
    "id": "8280dd4e-b1c2-48e3-9716-17ae0c906e1f",
    "metadata": {},
    "outputs": [
@@ -138,12 +138,12 @@
     "    | (merged_df[\"Total_Births\"] == \"0\")\n",
     "]\n",
     "\n",
-    "print(filtered)\n"
+    "print(filtered)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 90,
    "id": "005f0187-8e38-46d3-8e25-55fb5011551c",
    "metadata": {},
    "outputs": [],
@@ -158,17 +158,13 @@
     "#replacing values <11 with 5.5\n",
     "merged_df[\"Total_Births\"] = merged_df[\"Total_Births\"].replace(\"<11\", \"5.5\")\n",
     "\n",
-    "# replacing values 0 with \"0\"\n",
-    "merged_df[\"Total_Births\"] = merged_df[\"Total_Births\"].replace(\"0\", \"0\")\n",
-    "\n",
     "# converting from string to numeric\n",
-    "merged_df[\"Total_Births\"] = pd.to_numeric(merged_df[\"Total_Births\"], errors=\"coerce\")\n",
-    "\n"
+    "merged_df[\"Total_Births\"] = pd.to_numeric(merged_df[\"Total_Births\"], errors=\"coerce\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 91,
    "id": "e419ffc6-5165-46cc-97a8-c8e37e6181e7",
    "metadata": {},
    "outputs": [
@@ -192,7 +188,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 92,
+   "id": "222d8623-ddb4-4f3f-b192-b28e8822ffd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# List of zip codes to delete bc they are ZIP codes issued to large corporations or government/university areas\n",
+    "zip_codes_to_delete = [\n",
+    "    90009, 90030, 90050, 90051, 90052, 90053, 90054, 90055, 90060, 90070, 90071, 90072,\n",
+    "    90073, 90074, 90075, 90076, 90077, 90078, 90079, 90080, 90081, 90082, 90083, 90084,\n",
+    "    90086, 90087, 90088, 90089, 90090, 90091, 90093, 90095, 90096, 90099, 90103, 90189,\n",
+    "    90202, 90209, 90213, 90223, 90224, 90231, 90233, 90239, 90251, 90261, 90263, 90264,\n",
+    "    90267, 90292, 90294, 90295, 90296, 90306, 90307, 90308, 90309, 90310, 90311, 90312,\n",
+    "    90313, 90397, 90398, 90406, 90407, 90408, 90409, 90410, 90411, 90502, 90506, 90507,\n",
+    "    90508, 90509, 90510, 90607, 90608, 90609, 90610, 90612, 90631, 90637, 90639, 90651,\n",
+    "    90652, 90659, 90661, 90662, 90671, 90702, 90704, 90707, 90711, 90714, 90731, 90733,\n",
+    "    90734, 90744, 90747, 90748, 90749, 90801, 90807, 90809, 90810,90822, 90831, 90832, 90833,\n",
+    "    90834, 90835, 90840, 90842, 90844, 90845, 90846, 90847, 90848, 90853, 90888, 90895,\n",
+    "    90899, 91003, 91009, 91012, 91017, 91021, 91023, 91025, 91031, 91041, 91043, 91046,\n",
+    "    91066, 91077, 91102, 91109, 91110, 91114, 91115, 91116, 91117, 91118, 91121, 91123,\n",
+    "    91124, 91125, 91126, 91129, 91131, 91182, 91184, 91185, 91188, 91189, 91191, 91199,\n",
+    "    91209, 91221, 91222, 91224, 91225, 91226, 91305, 91308, 91309, 91310, 91313, 91322,\n",
+    "    91327, 91328, 91329, 91330, 91333, 91334, 91337, 91341, 91346, 91353, 91357, 91359,\n",
+    "    91363, 91365, 91371, 91372, 91376, 91380, 91382, 91383, 91385, 91386, 91388, 91392,\n",
+    "    91393, 91394, 91395, 91396, 91399, 91404, 91407, 91408, 91409, 91410, 91412, 91413,\n",
+    "    91416, 91426, 91470, 91482, 91495, 91496, 91497, 91499, 91503, 91504, 91507, 91508,\n",
+    "    91510, 91521, 91522, 91523, 91526, 91603, 91608, 91609, 91610, 91611, 91612, 91614,\n",
+    "    91615, 91616, 91617, 91618, 91714, 91715, 91716, 91734, 91735, 91747, 91749, 91759,\n",
+    "    91769, 91778, 91788, 91793, 91795, 91797, 91799, 91802, 91841, 91896, 91899, 93523,\n",
+    "    93539, 93584, 93586, 93590, 93599\n",
+    "]\n",
+    "\n",
+    "zip_column = 'ZIP_Code_of_Residence'  \n",
+    "\n",
+    "# Delete rows with specified zip codes\n",
+    "merged_df = merged_df[~merged_df[zip_column].isin(zip_codes_to_delete)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "id": "bd3db82c-64bd-486d-85a4-6c3071dcd9d7",
    "metadata": {},
    "outputs": [],
@@ -207,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 94,
    "id": "0f5165d0-9c37-459c-a4b7-11366b0119a5",
    "metadata": {},
    "outputs": [],
@@ -231,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "id": "50f5a9ea-ba2e-4928-9be6-1c730635adee",
    "metadata": {},
    "outputs": [],
@@ -239,29 +276,19 @@
     "# Calculating %LBW & High-risk classification\n",
     "final = total_births.merge(lbw_count, on=[\"ZIP_Code_of_Residence\", \"Year_of_Birth\"], how=\"left\")\n",
     "final[\"LBW_Count\"] = final[\"LBW_Count\"].fillna(0)\n",
+    "final[\"LBW_Pct\"] = (final[\"LBW_Count\"] / final[\"Total_Births_All\"]) * 100\n",
     "\n",
-    "final[\"Pct_LBW\"] = (final[\"LBW_Count\"] / final[\"Total_Births_All\"]) * 100\n",
-    "final[\"High_Risk\"] = (final[\"Pct_LBW\"] > 8).astype(int)\n"
+    "# fill with 0\n",
+    "final['LBW_Pct'] = final['LBW_Pct'].fillna(0)\n",
+    "final[\"High_Risk\"] = (final[\"LBW_Pct\"] > 8).astype(int)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "1a52d6aa-0275-4d4c-a33e-cd5746dd395d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rows: 10195\n",
-      "Columns: 6\n",
-      "\n",
-      "Column Names:\n",
-      " ['Type_of_Event', 'Year_of_Birth', 'Residence_or_Place_of_Birth', 'ZIP_Code_of_Residence', 'Birthweight_Grams', 'Total_Births']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Rows:\", merged_df.shape[0])\n",
     "print(\"Columns:\", merged_df.shape[1])\n",
@@ -270,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "b443da0c-0c8f-4101-8663-4167f3dbd823",
    "metadata": {},
    "outputs": [],
