fixed major errors

--- a/Data cleaning files/SVI_ACS_datacleaning.ipynb
+++ b/Data cleaning files/SVI_ACS_datacleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "2e3e1124-de21-42b2-9607-e2ce2d8dbfc5",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "887ec9ad-7443-4377-b6de-d252b551c30d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
-    "svi_path = r\"C:\\Users\\Elias\\OneDrive\\Desktop\\SVI data\\*.csv\"\n",
-    "acs_path = r\"C:\\Users\\Elias\\OneDrive\\Desktop\\ACS data\\*.csv\"\n",
+    "svi_path = r\"C:\\Users\\Elias\\Final Project/SVI data files\\*.csv\"\n",
+    "acs_path = r\"C:\\Users\\Elias\\Final Project/ACS data files\\*.csv\"\n",
     "\n",
     "# Get all CSV files\n",
     "svi_files = glob.glob(svi_path)\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "28970fd4-2e58-4c9b-a391-18877a1575ca",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
     "    columns_to_extract = ['GEO_ID'] + available_columns\n",
     "    \n",
     "    if available_columns:  # Only process if this file has columns we want\n",
-    "        # Use .copy() to avoid SettingWithCopyWarning\n",
+    "        # Using .copy() to avoid SettingWithCopyWarning\n",
     "        df_subset = df[columns_to_extract].copy()\n",
     "        \n",
     "        # Converting numeric columns to proper type\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "72c51a9b-fb85-4de6-ab7c-2d354d3c05fb",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "356af835-0a22-4c32-a398-5f99bfde427c",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "2a8f854d-8c24-4dde-9310-ca87627ce986",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "a33dc99f-41ce-4a66-83f2-e5b1a8d3e566",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "cd471712-71cc-4171-ae8e-26af601ac181",
    "metadata": {},
    "outputs": [],
